added heat map key

--- a/heatmap.html
+++ b/heatmap.html
@@ -603,7 +603,7 @@ function getPoints() {
 
     </script>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&signed_in=true&libraries=visualization&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRtTyAM0jRmlb9-EUorv0Kcx7VVKqhsBY&signed_in=true&libraries=visualization&callback=initMap">
     </script>
   </body>
 </html>
