--- a/braintree.html
+++ b/braintree.html
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">Donate</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -88,7 +88,7 @@
             <div class="row text-center">
                 <form id="checkout" method="post" action="/checkout">
                     <div id="payment-form"></div>
-                    <input type="submit" value="Pay $10">
+                    <input type="submit" value="Make payment">
                 </form>
 
                 <script src="https://js.braintreegateway.com/v2/braintree.js"></script>
