added map to info page

--- a/heatmap.html
+++ b/heatmap.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Heatmaps</title>
+     <!-- Bootstrap Core CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+
+    <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+
+    <!-- Plugin CSS -->
+    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/separators.css" type="text/css">
     <style>
       html, body {
         height: 100%;
@@ -39,6 +52,133 @@
   </head>
 
   <body>
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Pancreatc Cancer</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="#about">Be informed</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#services">Get involved</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#portfolio">About us</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#portfolio">Donate</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+<section id="first">
+                <h2>Overview</h2>
+          <p>
+Over the course of the summer we talked to potential end users, NGO’s, political representatives and academics for their opinions on our device. We wanted to know what it would take to make our biosensor useful so it could be properly implemented in society. Through these conversations we learned that for it to be an improvement upon current methods it would need to be easy to use, portable, inexpensive to manufacture. These conversations guided us throughout our design evolution to create the simple but elegant design we have right now. 
+          </p>
+
+                  <p>
+Another big input for our design process was trying to computationally model how our biosensor will behave with respect to sample application to help us understand how it will actually work.
+         </p>
+            </section>
+
+<!-- END OVERVIEW -->
+
+<svg id="bigHalfCircle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                <path d="M0 100 C40 0 60 0 100 100 Z"/>
+            </svg>
+            <section class="col-2 color" id="second">
+                        <div class="column">
+                            <img class="img-responsive" src="http://2015.igem.org/wiki/images/4/4c/Edigem15_Design_prototype1.jpg">
+                        </div>
+                        <div class="column text">
+                    <h2>Prototype 1</h2>
+          <p>
+Once we decided on a paper-based biosensor we wanted to make sure it would have optimal utility. This initial prototype is a simple design with the immobilised enzymes in the centre. By dipping the biosensor in a solution, the diffusion of the solution should re-hydrate the freeze-dried enzymes and produce a colour. This design, ideally the size of a microscope slide, should be easy to use and portable which is exactly what is required.
+          </p>
+                         </div>
+            </section>
+            <svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                <path id="trianglePath1" d="M0 0 L50 100 L100 0 Z" />
+                <path id="trianglePath2" d="M50 100 L100 40 L100 0 Z" />
+            </svg>
+
+<!-- END PROTOTYPE 1 -->
+
+            <section class = "col-2">
+                            <div class="column text pull-left">
+                <h2>Prototype 2 </h2>
+        <p>
+A talk with former MSP Susan Deacon led us to realise we need to have multiple tests on one strip for increased effectiveness compared to current detection methods. After a group brainstorm session on how to multiplex our first prototype we designed our second prototype. This prototype has laser cut rectangles to allow multiple bioactive zones. The whole biosensor will be covered in sticky tape, creating hydrophobic barriers between the different bioactive zones.
+       <p>
+Once we put prototype 2 to the test, we realised that the colour diffused too much making it difficult to read the results of the test
+       </p>
+                            </div>
+                            <div class="column">
+                               <img class="img-responsive" src="http://2015.igem.org/wiki/images/6/62/Edigem15_Design_prototype2.jpg" height="150">
+                            </div>
+ <div class="column">
+                               <img class="img-responsive" src="http://2015.igem.org/wiki/images/b/b8/Spreadmodel.gif" height="50%">
+                            </div>
+            </section>
+
+<!-- END PROTOTYPE 2 -->
+
+
+<svg id="bigHalfCircle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                <path d="M0 100 C40 0 60 0 100 100 Z"/>
+            </svg>
+            <section class="col-2 color">
+                        <div class="column">
+                            <img class="img-responsive" src="http://2015.igem.org/wiki/images/4/41/Edigem15_Design_prototype3.jpg">
+                        </div>
+                        <div class="column text">
+                    <h2>Prototype 3 </h2>
+          <p>
+With the help of our modelling efforts we were able to come up with a new solution, make cavities in the design in order to contain the colour produced. This prototype would also allow us to control the amount of time the solution stays on the bioactive zone ensuring that it would be there long enough to produce the colour.
+</p><p>
+At this time we really did think we had a winner, but <a href = "http://2015.igem.org/Team:Edinburgh/Practices/Serenity"> talking to more experts </a> made us realise we could incorporate what we heard by decreasing the amount of solution required. The previous prototype requires 150 µl of liquid sample which could be deemed too much and a waste, therefore discouraging people to use it.
+          </p>
+                </div>
+            </section>
+            <svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                <path id="trianglePath1" d="M0 0 L50 100 L100 0 Z" />
+                <path id="trianglePath2" d="M50 100 L100 40 L100 0 Z" />
+            </svg>
+
+<!-- END PROTOTYPE 3 -->
+            <section class="col-2" id="final">
+                            <div class="column text">
+                <h2>Final Biosensor Design</h2>
+        <p>We took inspiration from a design created by George Whiteside's lab at Harvard University and came up with the design we have now.
+ This final design only requires one tenth of the amount of solution thereby decreasing the overall amount of drug used.
+        </p>
+                             </div>
+                             <div class="column">
+                               <img class="img-responsive pull-right" src="http://2015.igem.org/wiki/images/d/d6/Edigem15_Design_prototype4.jpg">
+                             </div>
+            </section>
+<!-- END FINAL BIOSENSOR -->
+<section id ="map">
     <div id="floating-panel">
       <button onclick="toggleHeatmap()">Toggle Heatmap</button>
       <button onclick="changeGradient()">Change gradient</button>
@@ -46,6 +186,7 @@
       <button onclick="changeOpacity()">Change opacity</button>
     </div>
     <div id="map"></div>
+</section>
     <script>
 
 var map, heatmap;
@@ -133,5 +274,19 @@ function getPoints() {
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRtTyAM0jRmlb9-EUorv0Kcx7VVKqhsBY&signed_in=true&libraries=visualization&callback=initMap">
     </script>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/jquery.fittext.js"></script>
+    <script src="js/wow.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/creative.js"></script
   </body>
 </html>
