--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <a href="#" class="portfolio-box">
                         <div class="container">
                             <div class="row">
-                                <a class="twitter-timeline" href="https://twitter.com/pancreaticcansc" data-widget-id="663118446805319680" width="520px" height="267px">Tweets by @pancreaticcansc</a>
+                                <a class="twitter-timeline" href="https://twitter.com/pancreaticcansc" data-widget-id="663118446805319680" width="520px" height="267px" style="z-index:-1">Tweets by @pancreaticcansc</a>
                                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
                                 </div>
                             </div>
