--- a/heatmap.html
+++ b/heatmap.html
@@ -90,14 +90,14 @@
         <!-- /.container-fluid -->
     </nav>
 
-<section id="first">
-                <h2>Overview</h2>
+<section class="color" id="first">
+                <h2>Introduction</h2>
           <p>
-Over the course of the summer we talked to potential end users, NGO’s, political representatives and academics for their opinions on our device. We wanted to know what it would take to make our biosensor useful so it could be properly implemented in society. Through these conversations we learned that for it to be an improvement upon current methods it would need to be easy to use, portable, inexpensive to manufacture. These conversations guided us throughout our design evolution to create the simple but elegant design we have right now. 
-          </p>
-
-                  <p>
-Another big input for our design process was trying to computationally model how our biosensor will behave with respect to sample application to help us understand how it will actually work.
+Around 8,800 people are diagnosed with pancreatic cancer in the UK each year, making it the 11th most common cancer.
+<br>
+Cancer of the pancreas is more common in older people, with about half of all new cases diagnosed in people who are aged 75 or over. It's uncommon in people under 40 years of age.
+<br>
+Pancreatic cancer affects men and women equally. 
          </p>
             </section>
 
@@ -106,16 +106,19 @@ Another big input for our design process was trying to computationally model how
 <svg id="bigHalfCircle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
                 <path d="M0 100 C40 0 60 0 100 100 Z"/>
             </svg>
-            <section class="col-2 color" id="second">
-                        <div class="column">
-                            <img class="img-responsive" src="http://2015.igem.org/wiki/images/4/4c/Edigem15_Design_prototype1.jpg">
-                        </div>
-                        <div class="column text">
-                    <h2>Prototype 1</h2>
+            <section id="second">
+                    <h2>The pancreas</h2>
           <p>
-Once we decided on a paper-based biosensor we wanted to make sure it would have optimal utility. This initial prototype is a simple design with the immobilised enzymes in the centre. By dipping the biosensor in a solution, the diffusion of the solution should re-hydrate the freeze-dried enzymes and produce a colour. This design, ideally the size of a microscope slide, should be easy to use and portable which is exactly what is required.
+The pancreas is a large gland that's part of the digestive system. It's about 15cm (six inches) long, and is located high in the abdomen, behind the stomach, where the ribs meet at the bottom of the breastbone.
+<br>
+The pancreas produces:
+<br>
+    digestive enzymes – which break down food so it can be absorbed into the body
+    <br>
+    hormones – including insulin, which helps keep your blood sugar levels stable
+
           </p>
-                         </div>
+
             </section>
             <svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
                 <path id="trianglePath1" d="M0 0 L50 100 L100 0 Z" />
@@ -124,59 +127,64 @@ Once we decided on a paper-based biosensor we wanted to make sure it would have 
 
 <!-- END PROTOTYPE 1 -->
 
-            <section class = "col-2">
-                            <div class="column text pull-left">
-                <h2>Prototype 2 </h2>
+            <section class="color">
+                <h2>Pancreatic cancer</h2>
         <p>
-A talk with former MSP Susan Deacon led us to realise we need to have multiple tests on one strip for increased effectiveness compared to current detection methods. After a group brainstorm session on how to multiplex our first prototype we designed our second prototype. This prototype has laser cut rectangles to allow multiple bioactive zones. The whole biosensor will be covered in sticky tape, creating hydrophobic barriers between the different bioactive zones.
-       <p>
-Once we put prototype 2 to the test, we realised that the colour diffused too much making it difficult to read the results of the test
+In the early stages, a tumour in the pancreas doesn't usually cause any symptoms, which can make it difficult to diagnose.
+<br>
+The first noticeable symptoms of pancreatic cancer are often:
+<br>
+    pain in the back or stomach area<br>
+    unexpected weight loss<br>
+    jaundice (yellowing of the skin and whites of the eyes)<br>
+
+It's important to remember that these symptoms can be caused by many different conditions, and aren't usually the result of cancer. However, you should contact your GP if you're concerned, or if these symptoms start suddenly.
        </p>
                             </div>
-                            <div class="column">
-                               <img class="img-responsive" src="http://2015.igem.org/wiki/images/6/62/Edigem15_Design_prototype2.jpg" height="150">
-                            </div>
- <div class="column">
-                               <img class="img-responsive" src="http://2015.igem.org/wiki/images/b/b8/Spreadmodel.gif" height="50%">
-                            </div>
             </section>
-
-<!-- END PROTOTYPE 2 -->
-
 
 <svg id="bigHalfCircle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
                 <path d="M0 100 C40 0 60 0 100 100 Z"/>
             </svg>
-            <section class="col-2 color">
-                        <div class="column">
-                            <img class="img-responsive" src="http://2015.igem.org/wiki/images/4/41/Edigem15_Design_prototype3.jpg">
-                        </div>
-                        <div class="column text">
-                    <h2>Prototype 3 </h2>
+            <section id="second">
+                    <h2>Diagnosing pancreatic cancer</h2>
           <p>
-With the help of our modelling efforts we were able to come up with a new solution, make cavities in the design in order to contain the colour produced. This prototype would also allow us to control the amount of time the solution stays on the bioactive zone ensuring that it would be there long enough to produce the colour.
-</p><p>
-At this time we really did think we had a winner, but <a href = "http://2015.igem.org/Team:Edinburgh/Practices/Serenity"> talking to more experts </a> made us realise we could incorporate what we heard by decreasing the amount of solution required. The previous prototype requires 150 µl of liquid sample which could be deemed too much and a waste, therefore discouraging people to use it.
+Your GP will ask about your general health and carry out a physical examination.
+<br>
+They will check your skin and eyes for signs of jaundice, and you may also have a urine and blood test.
+<br>
+Your GP may also examine your tummy (abdomen) for a lump and to see whether your liver is enlarged.
+<br>
+If your GP suspects pancreatic cancer, you may be referred to a specialist at a hospital for further investigation. You may have an ultrasound scan, computerised tomography (CT) scan, or a magnetic resonance imaging (MRI) scan.
+
           </p>
-                </div>
+
             </section>
             <svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
                 <path id="trianglePath1" d="M0 0 L50 100 L100 0 Z" />
                 <path id="trianglePath2" d="M50 100 L100 40 L100 0 Z" />
             </svg>
 
-<!-- END PROTOTYPE 3 -->
-            <section class="col-2" id="final">
-                            <div class="column text">
-                <h2>Final Biosensor Design</h2>
-        <p>We took inspiration from a design created by George Whiteside's lab at Harvard University and came up with the design we have now.
- This final design only requires one tenth of the amount of solution thereby decreasing the overall amount of drug used.
-        </p>
-                             </div>
-                             <div class="column">
-                               <img class="img-responsive pull-right" src="http://2015.igem.org/wiki/images/d/d6/Edigem15_Design_prototype4.jpg">
-                             </div>
+        <section class="color">
+                <h2>Treating pancreatic cancer</h2>
+        <p>
+Cancer of the pancreas is difficult to treat. It rarely causes any symptoms in the early stages, so it's often not detected until the cancer is fairly advanced. If the tumour is large, treating the cancer will be more difficult.
+<br>
+If you've been diagnosed with pancreatic cancer, your treatment will depend on the type and location of your cancer, and how far it's advanced. Your age, general health and personal preferences will also be taken into consideration.
+<br>
+The first aim will be to completely remove the tumour and any other cancerous cells. If this isn't possible, treatment will focus on preventing the tumour growing and causing further harm to your body.
+<br>
+The three main treatments for pancreatic cancer are:
+<br>
+ <br>   surgery
+ <br>   chemotherapy
+  <br>  radiotherapy
+
+       </p>
+                            </div>
             </section>
+
+
 <!-- END FINAL BIOSENSOR -->
 <section id ="map">
     <div id="floating-panel">
