--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 
     <title>Pancreatic Cancer Scotland | Welcome</title>
 
+    <!-- JS -->
+    <script src="js/*.js"></script>
+    <script>
+        $(function() {
+            $('input[id="form-dob-calendar-field"]').
+            daterangepicker({
+                startDate: new moment(),
+                singleDatePicker: true,
+                showDropdowns: true
+            });
+        });
+    </script>
+
+
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all">
