Test page working beta

--- a/quiz.html
+++ b/quiz.html
@@ -26,6 +26,8 @@
 
 <body>
 	
+	<h1 style="text-align:center">Click on the symptoms you suffer from</h1>
+	
     <div class="inline"	id="zeroth">Headache</div>
 	
     <div class="inline" id="one">Abdominal pain</div>
