--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="row">
                 <a class="twitter-timeline"  href="https://twitter.com/pancreaticcansc" data-widget-id="663118446805319680">Tweets by @pancreaticcansc</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-            <div class="fb-page" align="right" data-href="https://www.facebook.com/Pancreatic-Cancer-Scotland-306220162741768/" data-width="500" data-height="250" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"></div>
+            <div class="fb-page" data-href="https://www.facebook.com/Pancreatic-Cancer-Scotland-306220162741768/" data-width="500px" data-hide-cover="false" data-show-facepile="true" data-show-posts="true" data-height="450px"></div>
     </section>
 
     <section id="contact">
