--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="keywords" content="jquery, slide out,accordion, css3, fadeout, fadein, elegant, fancy, box shadow"/>
 
     <title>Pancreatic Cancer Scotland | Welcome</title>
     <!-- JS -->
@@ -42,6 +43,35 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+     <style>
+            #content{
+                margin:0 auto;
+            }
+            .reference{
+                clear:both;
+                top:300px;
+                left:0px;
+                position:absolute;
+                text-align:right;
+                width:400px;
+                padding:20px;
+                background-color:#fff;
+                -moz-box-shadow:1px 3px 15px #ddd;
+                -webkit-box-shadow:1px 3px 15px #ddd;
+                box-shadow:1px 3px 15px #ddd;
+            }
+            .reference p a{
+                text-transform:uppercase;
+                text-shadow:1px 1px 1px #fff;
+                color:#666;
+                text-decoration:none;
+                font-size:10px;
+            }
+            .reference p a:hover{
+                color:#333;
+            }
+        </style>
 
 </head>
 
@@ -156,36 +186,73 @@
         </div>
     </section>
 
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <div class="container">
-                            <div class="row">
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
+    <section style="height: 150px">
+            <ul class="accordion" id="accordion">
+            <li class="bg1">
+                <div class="heading">Calendar</div>
+                <div class="bgDescription"></div>
+                <div class="description">
+                    <h2>News and Events</h2>
+                    <p>Check here regularly for the latest news and events!</p>
+                    <a href="#">more &rarr;</a>
                 </div>
-            </div>
+            </li>
+            <li class="bg2">
+                <div class="heading">Volunteer</div>
+                <div class="bgDescription"></div>
+                <div class="description">
+                    <h2>Volunteering</h2>
+                    <p>Like to help out and be a source of support? Sign up here!</p>
+                    <a href="#">more &rarr;</a>
+                </div>
+
+            </li>
+            <li class="bg3">
+                <div class="heading">Symptoms</div>
+                <div class="bgDescription"></div>
+                <div class="description">
+                    <h2>Symptoms</h2>
+                    <p>Take this test for total peace of mind!</p>
+                    <a href="#">more &rarr;</a>
+                </div>
+
+            </li>
+            <li class="bg4 bleft">
+                <div class="heading">Info</div>
+                <div class="bgDescription"></div>
+                <div class="description">
+                    <h2>Information</h2>
+                    <p>Click here for infographics and in-depth information about the condition.</p>
+                    <a href="#">more &rarr;</a>
+                </div>
+
+                </li>
+            </ul>
         </div>
     </section>
 
+        <!-- The JavaScript -->
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+        <script type="text/javascript">
+            $(function() {
+                $('#accordion > li').hover(
+                    function () {
+                        var $this = $(this);
+                        $this.stop().animate({'width':'480px'},500);
+                        $('.heading',$this).stop(true,true).fadeOut();
+                        $('.bgDescription',$this).stop(true,true).slideDown(500);
+                        $('.description',$this).stop(true,true).fadeIn();
+                    },
+                    function () {
+                        var $this = $(this);
+                        $this.stop().animate({'width':'115px'},1000);
+                        $('.heading',$this).stop(true,true).fadeIn();
+                        $('.description',$this).stop(true,true).fadeOut(500);
+                        $('.bgDescription',$this).stop(true,true).slideUp(700);
+                    }
+                );
+            });
+        </script>
 
     <section class="bg-dark" id="services">
         <div class="container">
