--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <meta name="author" content="">
 
     <title>Pancreatic Cancer Scotland | Welcome</title>
+    <!-- JS -->
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery.fittext.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/moment.min.js"></script>
+    <script src="js/daterangepicker.js"></script>
+    <script src="js/volunteerForm.js"></script>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all">
