--- a/quiz.html
+++ b/quiz.html
@@ -41,11 +41,11 @@
     <div class="inline"	id="eight">		<p>Diabetes</p></div>
     <div class="inline"	id="nine">		<p>Back pain</p></div>
     <div class="inline"	id="ten">		<p>Shivering</p></div>
-    <div class="inline"	id="eleven">	<p>...to be added...</p></div>
+    <div class="inline"	id="eleven">	<p>..to be added..</p></div>
     
     <div style="width:100%; text-align:center;">
 		<button class="btn">
-			<p>get feedback</p>
+			<p id="feedback">get feedback</p>
 		</button>
 	</div>
 	
