--- a/heatmap.html
+++ b/heatmap.html
@@ -56,32 +56,32 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Pancreatc Cancer</a>
+                <a class="navbar-brand" href="#page-top">Pancreatc Cancer</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="navbar" id="bs-example-navbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">Be informed</a>
+                        <a href="#">Be informed</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Get involved</a>
+                        <a href="#">Get involved</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">About us</a>
+                        <a href="#">About us</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Donate</a>
+                        <a href="#">Donate</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a href="#">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -90,7 +90,7 @@
         <!-- /.container-fluid -->
     </nav>
 
-<section class="color" id="first">
+<section class= "text-center" id="first">
                 <h2>Introduction</h2>
           <p>
 Around 8,800 people are diagnosed with pancreatic cancer in the UK each year, making it the 11th most common cancer.
@@ -106,7 +106,7 @@ Pancreatic cancer affects men and women equally.
 <svg id="bigHalfCircle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
                 <path d="M0 100 C40 0 60 0 100 100 Z"/>
             </svg>
-            <section id="second">
+            <section class="color" id="second">
                     <h2>The pancreas</h2>
           <p>
 The pancreas is a large gland that's part of the digestive system. It's about 15cm (six inches) long, and is located high in the abdomen, behind the stomach, where the ribs meet at the bottom of the breastbone.
@@ -127,7 +127,7 @@ The pancreas produces:
 
 <!-- END PROTOTYPE 1 -->
 
-            <section class="color">
+            <section>
                 <h2>Pancreatic cancer</h2>
         <p>
 In the early stages, a tumour in the pancreas doesn't usually cause any symptoms, which can make it difficult to diagnose.
@@ -146,7 +146,7 @@ It's important to remember that these symptoms can be caused by many different c
 <svg id="bigHalfCircle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
                 <path d="M0 100 C40 0 60 0 100 100 Z"/>
             </svg>
-            <section id="second">
+            <section class="color" id="second">
                     <h2>Diagnosing pancreatic cancer</h2>
           <p>
 Your GP will ask about your general health and carry out a physical examination.
@@ -165,7 +165,7 @@ If your GP suspects pancreatic cancer, you may be referred to a specialist at a 
                 <path id="trianglePath2" d="M50 100 L100 40 L100 0 Z" />
             </svg>
 
-        <section class="color">
+        <section>
                 <h2>Treating pancreatic cancer</h2>
         <p>
 Cancer of the pancreas is difficult to treat. It rarely causes any symptoms in the early stages, so it's often not detected until the cancer is fairly advanced. If the tumour is large, treating the cancer will be more difficult.
@@ -177,7 +177,7 @@ The first aim will be to completely remove the tumour and any other cancerous ce
 The three main treatments for pancreatic cancer are:
 <br>
  <br>   surgery
- <br>   chemotherapy
+  <br>  chemotherapy
   <br>  radiotherapy
 
        </p>
