--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
 
 <body id="page-top">
@@ -144,10 +143,12 @@
                 </video>
 
 
-                <p><a href="#about" style="font-size: 40px; font-family: 'Amatic SC'; cursive" class="changecol btn btn-primary btn-xl page-scroll add-top-margin">Donate Here</a></p>
+                <p><a id="donate" href="braintree.html" style="font-size: 40px; font-family: 'Amatic SC'; cursive" class="changecol btn btn-primary btn-xl page-scroll add-top-margin">Donate Here</a></p>
             </div>
         </div>
     </section>
+
+    
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
