--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <!-- Set the first background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('http://snukiskis.com/video/1.png');"></div>
                 <div class="carousel-caption">
-                    <a href="#about" class="btn btn-primary btn-xl page-scroll">Test yourself</a>
+                    <a href="./quiz.html" class="btn btn-primary btn-xl page-scroll">Test yourself</a>
                 <a href="#about" class="btn btn-primary btn-xl add-left-margin page-scroll">Get involved</a>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('http://snukiskis.com/video/2.jpg');"></div>
                 <div class="carousel-caption">
-                    <a href="#about" class="btn btn-primary btn-xl page-scroll">Test yourself</a>
+                    <a href="./quiz.html" class="btn btn-primary btn-xl page-scroll">Test yourself</a>
                 <a href="#about" class="btn btn-primary btn-xl add-left-margin page-scroll">Get involved</a>
                 </div>
             </div>
@@ -155,7 +155,7 @@
                 <!-- Set the third background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('http://snukiskis.com/video/3.png');"></div>
                 <div class="carousel-caption">
-                    <a href="#about" class="btn btn-primary btn-xl page-scroll">Test yourself</a>
+                    <a href="./quiz.html" class="btn btn-primary btn-xl page-scroll">Test yourself</a>
                 <a href="#about" class="btn btn-primary btn-xl add-left-margin page-scroll">Get involved</a>
                 </div>
             </div>
