fixed menu and link stuff together

--- a/index.html
+++ b/index.html
@@ -103,16 +103,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">Be informed</a>
+                        <a class="page-scroll" href="heatmap.html">Be informed</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Get involved</a>
+                        <a class="page-scroll" href="VolunteerForm.html">Get involved</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">About us</a>
+                        <a class="page-scroll" href="pcs.html">About us</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Donate</a>
+                        <a class="page-scroll" href="braintree.html">Donate</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact Us</a>
