--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 width:400px;
                 padding:20px;
                 background-color:#fff;
+                border-radius: 100px;
                 -moz-box-shadow:1px 3px 15px #ddd;
                 -webkit-box-shadow:1px 3px 15px #ddd;
                 box-shadow:1px 3px 15px #ddd;
