changed something in volunteer

--- a/VolunteerForm.html
+++ b/VolunteerForm.html
@@ -25,7 +25,7 @@
 <div class="container">
     <div class="row">
         <div class="form-box">
-            <h1>Volunteer <span>form</span></h1>
+            <h1>Volunteer <span>form</span></h1><p></p>
             <form role="form" action="http://127.0.0.1:8000/volunteers/register/" method="post" id="volunteer-form">
                 <!-- First name field -->
                 <div class="form-group">
